# banking-risk

./: .gitattributes  .gitignore  CLAUDE.md  README.md  banking_risk_dashboard.py  pyproject.toml  runbook.md
.github/workflows/: test.yml
.streamlit/: config.toml
docs/: bank_reg.md  dora.md  emir.md  ifrs13.md  ifrs9.md  mifid2_mifir.md
docs/screenshots/: README.md
notebooks/: 01_irrbb.ipynb  02_frtb_girr.ipynb  03_csrbb.ipynb  04_credit_risk.ipynb  05_liquidity_ratios.ipynb  06_liquidity_monitoring.ipynb  07_frtb_sa.ipynb  08_capital_adequacy.ipynb  irrbb_eve_nii.ipynb
src/banking_risk/: config.py  logging.py
src/banking_risk/capital/: __init__.py  icaap_orchestrator.py  icaap_stress.py  leverage_ratio.py  stack.py
src/banking_risk/credit_risk/: __init__.py  ba_cva.py  cva_aggregator.py  el.py  lgd.py  pd.py  sa_ccr.py  sa_ccr_portfolio.py
tests/: conftest.py  helpers.py  test_ba_cva.py  test_book.py  test_capital_stack.py  test_collateral.py  test_commodity_delta.py  test_constants.py  test_csr_delta.py  test_csr_sec_curvature.py  test_csr_sec_delta.py  test_csr_sec_vega.py  test_cva_aggregator.py  test_dashboard.py  test_drc.py  test_el.py  test_equity_delta.py  test_eve.py  test_ewi.py  test_frtb_integration.py  test_frtb_sa.py  test_funding_gap.py  test_fx_delta.py  test_gap.py  test_girr.py  test_girr_curvature.py  test_girr_vega.py  test_icaap_orchestrator.py  test_icaap_stress.py  test_ilaap.py  test_intraday.py  test_lcr.py  test_leverage_ratio.py  test_lgd.py  test_nii.py  test_nsfr.py  test_pd.py  test_portfolio.py  test_rrao.py  test_sa_ccr.py  (+7 more)
(+56 files in other folders)
