[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "banking-risk"
version = "0.1.0"
description = "Banking regulatory risk applications — IRRBB, FRTB, ICAAP"
authors = [{name = "mrspatbile", email = "mrspatbile@gmail.com"}]
requires-python = ">=3.13"

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "plotly",
    "jupyterlab",
    "ipykernel",
    "requests",
    "pyyaml",
    "pyarrow",
    "python-dotenv",
    "seaborn",
    "nbstripout",
    "python-json-logger",
    "quant-risk",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
dashboard = ["streamlit>=1.28", "plotly>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]